Set up SQLite3 interaction
* Add an abstract "write" method on all models
* Add sql files for main schema and test fixtures
* Add development sqlite3 file for testing
* Add unit test for main database class

--- a/DatabaseTest/DatabaseTest.csproj
+++ b/DatabaseTest/DatabaseTest.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestFixtures\test.sqlite3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
