Add PoC dashboard view model

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -6,4 +6,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Database\Database.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="main.sqlite3" />
+  </ItemGroup>
+
 </Project>
