Add some dark theming

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Themes\Dark.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Resource>
     <Resource Include="main.sqlite3" />
   </ItemGroup>
 
