--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -6,7 +6,7 @@
 
       <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.113.1" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.7" />
   </ItemGroup>
 
 </Project>
