--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -4,8 +4,11 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <RootNamespace>GUI</RootNamespace>
+    <AssemblyName>KeypressDatabase</AssemblyName>
+    <Version>0.1.0</Version>
   </PropertyGroup>
-
+    
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
   </ItemGroup>
@@ -14,6 +17,24 @@
     <Resource Include="Themes\Dark.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Resource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Update="Assets\Template.sqlite3">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
