--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -8,6 +8,10 @@
     <AssemblyName>KeypressDatabase</AssemblyName>
     <Version>0.1.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.7" />
+  </ItemGroup>
     
   <ItemGroup>
     <ProjectReference Include="..\Database\Database.csproj" />
