Add colour picker to EditKeyList control
This will eventually be used to colour-code different key lists in the
Dashboard.

This change also adds WinForms to the mix. Hooray for unported, legacy
stuff \o/

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <RootNamespace>GUI</RootNamespace>
     <AssemblyName>KeypressDatabase</AssemblyName>
     <Version>0.4.0</Version>
