Polish release build a bit more
- Add squadron icon to bottom right
- Resize windows a bit
- Add titles to windows

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -19,6 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Assets\607_sqn.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Themes\Dark.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Resource>
