--- a/Database/Database.csproj
+++ b/Database/Database.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.7" />
   </ItemGroup>
 
+      <ItemGroup>
+        <Folder Include="Migrations\" />
+      </ItemGroup>
 </Project>
